[package]
name = "task_manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full", "macros", "rt-multi-thread"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
once_cell = "1.18.0"
anyhow = "1.0.75"
